Started About html; h1 tag added to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <header>
-    Meet the Developer
+    <h1>Meet the Developer</h1>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="portfolio.html">Project</a>
