Started portfolio html and style css

--- a/about.html
+++ b/about.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 
 <header>
-   <h1>Meet the Developer</h1>
+   <h1 class="title">Meet the Developer</h1>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="portfolio.html">Project</a>
