--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
 </head>
 
 <header>
+    <section class="title">
     <h1>Meet the Developer</h1>
+    </section>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="portfolio.html">Project</a>
