Portfolio added; additions to the ablout and the home page; CSS added

--- a/about.html
+++ b/about.html
@@ -8,10 +8,14 @@
 </head>
 
 <header>
-   <h1 class="title">Meet the Developer</h1>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="portfolio.html">Project</a>
+    <nav>
+        <h1>Meet the Developer</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="portfolio.html">Project</a></li>
+        </ul>
+    </nav>
 </header>
 
     <h1>About Me!</h1>
@@ -20,7 +24,7 @@
     <section>
         <h2>Binge-Watcher</h2>
         <p>
-            In my spare time, I look at an assortment of media. It could be Hulu, Youtube, or Netflix. Anything with entertainment catches my attention. My favorite platform would be Youtube and I like to look at gaming videos. Playthough of a log game is how I would like to close out my day.
+            In my spare time, I look at an assortment of media. It could be Hulu, Youtube, or Netflix. Anything with entertainment catches my attention. My favorite platform would be Youtube and I like to look at gaming videos. Playthoughs of a long game is how I would like to close out my day.
         </p>
         <img src="Enter.png">
     </section>
@@ -28,7 +32,7 @@
     <section>
         <h2>Drawing</h2>
         <p>
-            I like to draw and sketch on my iPad to pass the time. My favorite style is cartoon-like portfolios. The exaggerated features allows me to express myself more that realism. One of my drawinf could be seen on the right.
+            I like to draw and sketch on my iPad to pass the time. My favorite style is cartoon-like portfolios. The exaggerated features allows me to express myself more than realism. One of my drawings could be seen on the right.
         </p>
         <img src="./personalDrawing.jpg">
     </section>
