--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
 </head>
 
 <header>
-    <section class="title">
-    <h1>Meet the Developer</h1>
-    </section>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="portfolio.html">Project</a>
+    <nav>
+        <h1>Meet the Developer</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="portfolio.html">Project</a></li>
+        </ul>
+    </nav>
 </header>
 
 <body>
 
     <section>
         <p>
-             Welcome to my page! Thank you for taking your time to visit my website. Please explore the options above to get to know me and to see my prodjects that I have worked on so far. 
+             Welcome to my page! Thank you for taking your time to visit my website. Please explore the options above to get to know me and to see my projects that I have worked on so far. 
         </p>
-    
-    </section>
-
-    <section>
         <img src="./Blur-Sweater.JPG">
     </section>
 </body>
