--- a/portfolio.html
+++ b/portfolio.html
@@ -8,17 +8,22 @@
 </head>
 
 <header>
-    <h1 clas="title">Meet the Developer</h1>
-     <a href="index.html">Home</a>
-     <a href="about.html">About</a>
-     <a href="portfolio.html">Project</a>
- </header>
+    <nav>
+        <h1>Meet the Developer</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="portfolio.html">Project</a></li>
+        </ul>
+    </nav>
+</header>
 
 <body>
     <h1>Projects</h1>
     <section>
         <p>
            No Projects 
+           <br/>
            <img src="./progress.jpg">
         </p>
     </section>
