Added javascript console message; Homepage header fixed

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css"/>
+    <script src="javascript.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
@@ -18,7 +19,7 @@
     </nav>
 </header>
 
-    <h1>About Me!</h1>
+<h1>About Me!</h1>
 
 <body>
     <section>
