--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css"/>
+    <script src="javascript.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
@@ -20,12 +21,16 @@
 
 <body>
 
+    <h1>Home</h1>
+
     <section>
+       
         <p>
              Welcome to my page! Thank you for taking your time to visit my website. Please explore the options above to get to know me and to see my projects that I have worked on so far. 
         </p>
         <img src="./Blur-Sweater.JPG">
     </section>
+
 </body>
 
 </html>
