Completed contact and submission page

--- a/submission.html
+++ b/submission.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css"/>
-    <script src="javascript.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
+    <head>
+        <link rel="stylesheet" href="style.css"/>
+        <script src="javascript.js"></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Submission</title>
+    </head>
 
 <header>
     <nav>
@@ -21,13 +21,6 @@
 </header>
 
 <body>
-    <h1>Projects</h1>
-    <section>
-        <p>
-           No Projects 
-           <br/>
-           <img src="./progress.jpg">
-        </p>
-    </section>
+    <h1 style="display:block; text-align: center; font-size: 100px; text-decoration: underline wavy;">Submission Complete</h1>
 </body>
 </html>
