--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 <header>
     <nav>
-        <h1>Meet the Developer</h1>
+        <h1 style="font-size: 50px;">Meet the Developer</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Project</a></li>
+            <li><a href="contact.html" >Contact</a></li>
         </ul>
     </nav>
 </header>
