--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,11 @@
             <label for="email">Email: </label>
             <input type="email" value=" "><br/>
 
+            <h2>Add Message</h2>
+                <textarea rows="10">
+
+                </textarea><br/>
+                
             <input class="submit_btn" type="submit" value="Submit Form" style="font-size: 20px;" />
         </form>
     </section>
