--- a/submission.html
+++ b/submission.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css"/>
-        <script src="javascript.js"></script>
+        <script src="submission.js"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Submission</title>
