README file editted; Grid added to conact page

--- a/contact.html
+++ b/contact.html
@@ -30,23 +30,26 @@
     <section class="contact">
         <h2>Enter information</h2>
 
-        <form action="./submission.html">
-
+        <form action="submission.html">
+            <div>   
             <label for="firstName">First Name: </label>
             <input type="text" value=" "><br/>
-
+            </div>
+            <div>
             <label for="lastName">Last Name: </label>
             <input type="text" value=" "><br/>
-
+            </div>
+            <div>
             <label for="email">Email: </label>
             <input type="email" value=" "><br/>
-
+            </div>
+            <div>
             <h2>Add Message</h2>
                 <textarea rows="10">
 
                 </textarea><br/>
-                
-            <input class="submit_btn" type="submit" value="Submit Form" style="font-size: 20px;" />
+            </div>
+            <input class="submit" value="Submit">
         </form>
     </section>
 </body>
