--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
                 </textarea><br/>
             </div>
-            <input class="submit" value="Submit">
+            <input class="submit_btn" type="submit" value="Submit" style="font-size: 20px;">
         </form>
     </section>
 </body>
